# mazda-cmu-tools

./: CMakeLists.txt  UPtools.cpp  failsafe.cpp  gencert.cpp  gencert.h  imx6boot.cpp  imximage.h
